fix: added the alignment of css class

--- a/src/index.css
+++ b/src/index.css
@@ -142,7 +142,8 @@ button:focus-visible {
 
 ::-webkit-scrollbar-thumb:hover {
   background-color: rgb(0, 172, 146);
-}.custom-task-checkbox {
+}
+.custom-task-checkbox {
   width: 20px;
   height: 20px;
   appearance: none;
